Fix Bugs and Changed Text

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 <body>
     <h3 class="acme-regular">Congratulations From <span>OO7</span></h3>
     <div class="book flex flex-col-reverse">
-        <button class="btn btn-success mt-6" onclick="my_modal_1.showModal()">See What OO7 Said</button>
+        <button class="btn btn-success mt-6" onclick="my_modal_1.showModal()">CLICK TO SEE MESSAGE</button>
         <dialog id="my_modal_1" class="modal">
-            <div class="modal-box">
+            <div class="modal-box bg-lime-300">
                 <h3 class="text-lg font-bold">Hi Dolphin!</h3>
-                <p class="py-4 text-base">অনেক অনেক অনেক শুভকামনা। আল্লাহ তোমাকে এমন সন্তান দিক যে তোমার চোখ প্রশান্ত
+                <p class="py-4 text-base">
+                    অনেক অনেক অনেক শুভকামনা। আল্লাহ তোমাকে এমন সন্তান দিক যে তোমার চোখ প্রশান্ত
                     করবে
                     তোমার
                     বৃদ্ধ বয়সে হাল ধরবে। অনেক অনেক অনেক দোয়া রইল।
