Change Name Dolphin to Mim

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="btn btn-success mt-6" onclick="my_modal_1.showModal()">CLICK TO SEE MESSAGE</button>
         <dialog id="my_modal_1" class="modal">
             <div class="modal-box bg-lime-300">
-                <h3 class="text-lg font-bold">Hi Dolphin!</h3>
+                <h3 class="text-lg font-bold">Hi Mim!</h3>
                 <p class="py-4 text-base">
                     অনেক অনেক অনেক শুভকামনা। আল্লাহ তোমাকে এমন সন্তান দিক যে তোমার চোখ প্রশান্ত
                     করবে
